--- a/files/f_style.css
+++ b/files/f_style.css
@@ -26,71 +26,72 @@ h2{
 }
 
 
-#homepage{
+#clone{
     text-align: center;
     background-color: #FFF4A3;
 }
 
-#homepage h2{
+#clone h2{
     padding: 5px;
     margin: 5px;
 }
+#git p{
+    font-size: 23px;
+}
 
-#html img,
-#css img,
-#js img,
-#git img{
-    max-width: 750px;
-    max-height: 750px;
+#clone_ssh {
+    max-width: 550px;
+    max-height: 550px;
     position: relative;
+}
+
+
+#clone p{
+    text-align: left;
 }
 
 section {
     margin: 8px auto;
     padding: 5px;
-    width: 88%;
+    width: 80.5%;
     background-color: #f6e9c9;
     border: 4px solid #032b43;
-}
-
-ul{
-    list-style-position: inside;
-    list-style-type: none;
-    font-size: 30px;
-    padding: 0;
-}
-li{
-    text-decoration: none;
-
-}
-
-#html{
-    background-color: #e0fbfc;
-}
-#css{
-    background-color: #a8dadc;
-}
-#js{
-    background-color: #74c69d;
-}
-#git{
-    background-color: #b5838d;
+    float: right;
+    padding-left: 100px;
 }
 
 a{
-    color: #3d405b;
-    text-decoration: none;
+    color: #57cc99;
 }
-
-a:hover{
-    text-decoration: underline;
-    font-size: 43px;
-}
-
 
 p{
     font-size: 20px;
     text-align: center;
+}
 
+.sidenav{
+    height: 100%;
+    width: 120px;
+    position: fixed;
+    z-index: 1;
+    top: 105px;
+    background-color: #FFF4A3;
+    padding: 10px;
+    border: #032b43 solid 5px;
+    margin: 5px;
+    text-align: center;
+    overflow-x:hidden;
+}
 
+.sidenav a{
+    position: inline;
+    text-decoration: none;
+    font-size: 22px;
+    color: #032b43;
+}
+
+.sidenav a:hover{
+    text-decoration: underline;
+    font-size: 24px;
+    
 }
