added folders for each individual section

--- a/files/git/git_style.css
+++ b/files/git/git_style.css
@@ -39,7 +39,8 @@ h2{
     font-size: 23px;
 }
 
-#clone_ssh {
+#clone_ssh,
+#term_clone {
     max-width: 550px;
     max-height: 550px;
     position: relative;
