--- a/files/git/git_style.css
+++ b/files/git/git_style.css
@@ -25,11 +25,68 @@ h2{
     font-size: 36px;
 }
 
+section {
+    margin: 8px auto;
+    padding: 5px;
+    width: 80.5%;
+    background-color: #f6e9c9;
+    border: 4px solid #032b43;
+    float: right;
+    padding-left: 100px;
+}
+
+a{
+    font-size: 35px;
+    color: #3d405b;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+    font-size: 43px;
+}
+
+#next{
+    float: right;
+}
+
+p{
+    font-size: 20px;
+    text-align: center;
+}
 
 #clone{
     text-align: center;
     background-color: #f6e9c9;
 }
+
+.sidenav{
+    width: 120px;
+    position: fixed;
+    z-index: 1;
+    top: 105px;
+    background-color: #FFF4A3;
+    padding: 10px;
+    border: #032b43 solid 5px;
+    margin: 5px;
+    text-align: center;
+    overflow-x:hidden;
+}
+
+.sidenav a{
+    position: inline;
+    text-decoration: none;
+    font-size: 22px;
+    color: #032b43;
+}
+
+.sidenav a:hover{
+    text-decoration: underline;
+    font-size: 24px;
+    
+}
+
+/* Git page specific styling */
 
 #clone h2{
     padding: 5px;
@@ -61,48 +118,3 @@ h2{
     text-align: left;
 }
 
-section {
-    margin: 8px auto;
-    padding: 5px;
-    width: 80.5%;
-    background-color: #f6e9c9;
-    border: 4px solid #032b43;
-    float: right;
-    padding-left: 100px;
-}
-
-a{
-    color: #57cc99;
-}
-
-p{
-    font-size: 20px;
-    text-align: center;
-}
-
-.sidenav{
-    height: 100%;
-    width: 120px;
-    position: fixed;
-    z-index: 1;
-    top: 105px;
-    background-color: #FFF4A3;
-    padding: 10px;
-    border: #032b43 solid 5px;
-    margin: 5px;
-    text-align: center;
-    overflow-x:hidden;
-}
-
-.sidenav a{
-    position: inline;
-    text-decoration: none;
-    font-size: 22px;
-    color: #032b43;
-}
-
-.sidenav a:hover{
-    text-decoration: underline;
-    font-size: 24px;
-    
-}
