added example folder

--- a/files/git/git_style.css
+++ b/files/git/git_style.css
@@ -113,7 +113,9 @@ p{
 #cloned_repo,
 #destination,
 #stage_diagram,
-#stage_ex {
+#stage_ex,
+#commit_ex,
+#repository {
     max-width: 550px;
     max-height: 550px;
     position: relative;
