--- a/files/git/git_style.css
+++ b/files/git/git_style.css
@@ -118,7 +118,8 @@ p{
 #push_ex,
 #repository,
 #pushed_repo,
-#local_dir {
+#local_dir,
+#local_out {
     max-width: 550px;
     max-height: 550px;
     position: relative;
