edited 'previous' link in git page

--- a/files/git/git_style.css
+++ b/files/git/git_style.css
@@ -50,8 +50,8 @@ a:hover{
     float: right;
 }
 #previous{
-    position: relative;
-    float: left;
+    position: absolute;
+    left: 185px;
 }
 
 p{
